{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 59,
  "lineage": "f9e0eac0-e14a-2ebf-c81d-2b0b24146340",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058d973bc6f2a2984",
            "domain": "vpc",
            "id": "eipalloc-058d973bc6f2a2984",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-95-3-227.compute-1.amazonaws.com",
            "public_ip": "3.95.3.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Eip 1"
            },
            "tags_all": {
              "Name": "Eip 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0beae1a09c1313662",
            "domain": "vpc",
            "id": "eipalloc-0beae1a09c1313662",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-33-168.compute-1.amazonaws.com",
            "public_ip": "54.156.33.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Eip 2"
            },
            "tags_all": {
              "Name": "Eip 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:internet-gateway/igw-05a41b0da66250064",
            "id": "igw-05a41b0da66250064",
            "owner_id": "331417608617",
            "tags": {
              "Name": "Test IGW"
            },
            "tags_all": {
              "Name": "Test IGW"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058d973bc6f2a2984",
            "connectivity_type": "public",
            "id": "nat-0f71a554e37288fa6",
            "network_interface_id": "eni-0f48944a64f19c869",
            "private_ip": "10.0.2.29",
            "public_ip": "3.95.3.227",
            "subnet_id": "subnet-0bafc2b341d3b3def",
            "tags": {
              "Name": "nat gateway public subnet 2"
            },
            "tags_all": {
              "Name": "nat gateway public subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_subnet.private-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0beae1a09c1313662",
            "connectivity_type": "public",
            "id": "nat-06fc6d78f74eca55b",
            "network_interface_id": "eni-0ded3227c796bb8b0",
            "private_ip": "10.0.3.119",
            "public_ip": "54.156.33.168",
            "subnet_id": "subnet-0673e58e2f68e4e2e",
            "tags": {
              "Name": "nat gateway public subnet 2"
            },
            "tags_all": {
              "Name": "nat gateway public subnet 2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_subnet.private-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:route-table/rtb-078f739711e634f71",
            "id": "rtb-078f739711e634f71",
            "owner_id": "331417608617",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f71a554e37288fa6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table 1"
            },
            "tags_all": {
              "Name": "private route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_subnet.private-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:route-table/rtb-0025cb4e6defe70a6",
            "id": "rtb-0025cb4e6defe70a6",
            "owner_id": "331417608617",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06fc6d78f74eca55b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table 2"
            },
            "tags_all": {
              "Name": "private route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_subnet.private-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:route-table/rtb-0dc7717166a001050",
            "id": "rtb-0dc7717166a001050",
            "owner_id": "331417608617",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a41b0da66250064",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b973eb3d041b0d6",
            "route_table_id": "rtb-078f739711e634f71",
            "subnet_id": "subnet-0bafc2b341d3b3def"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0343c224dde0c6587",
            "route_table_id": "rtb-0025cb4e6defe70a6",
            "subnet_id": "subnet-0673e58e2f68e4e2e"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.private-route-table-2",
            "aws_subnet.private-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d36b3f66e37c1a",
            "route_table_id": "rtb-078f739711e634f71",
            "subnet_id": "subnet-052a5c4469aa4b6f4"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-1",
            "aws_nat_gateway.nat-gateway-1",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.private-subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-4-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0ec7ac76f7dd911",
            "route_table_id": "rtb-0025cb4e6defe70a6",
            "subnet_id": "subnet-0094e04b16d40c701"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway-2",
            "aws_nat_gateway.nat-gateway-2",
            "aws_route_table.private-route-table-2",
            "aws_subnet.private-subnet-2",
            "aws_subnet.private-subnet-4",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0581a7801b7f67358",
            "route_table_id": "rtb-0dc7717166a001050",
            "subnet_id": "subnet-02acbf214c576c161"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fb36fa5f30412de",
            "route_table_id": "rtb-0dc7717166a001050",
            "subnet_id": "subnet-030ac562d98a4edd2"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:subnet/subnet-0bafc2b341d3b3def",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bafc2b341d3b3def",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331417608617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 | App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 1 | App Tier"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:subnet/subnet-0673e58e2f68e4e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0673e58e2f68e4e2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331417608617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 | App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 2 | App Tier"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:subnet/subnet-052a5c4469aa4b6f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052a5c4469aa4b6f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331417608617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3 | Database Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 3 | Database Tier"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:subnet/subnet-0094e04b16d40c701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094e04b16d40c701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "331417608617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 4 | Database Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 4 | Database Tier"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:subnet/subnet-02acbf214c576c161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02acbf214c576c161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331417608617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:subnet/subnet-030ac562d98a4edd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030ac562d98a4edd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331417608617",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-04a648cc3cd03ea80"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:331417608617:vpc/vpc-04a648cc3cd03ea80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7c2a09367aad2ab",
            "default_route_table_id": "rtb-018d813ff0e3a6e82",
            "default_security_group_id": "sg-0c0e083a84c2ff6a7",
            "dhcp_options_id": "dopt-07e439e9aeb9ebe3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a648cc3cd03ea80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018d813ff0e3a6e82",
            "owner_id": "331417608617",
            "tags": {
              "Name": "Test VPC"
            },
            "tags_all": {
              "Name": "Test VPC"
            }
          }
        }
      ]
    }
  ]
}